[package]
name = "rs_space"
version = "0.1.0"
edition = "2024"
default-run = "rs_space"

[dependencies]
rand = "0.9.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }

[features]
default = ["local"]
local = []

[lints.clippy]
all = "warn"
pedantic = "allow"
nursery = "allow"
